--- a/main.css
+++ b/main.css
@@ -1,8 +1,69 @@
 /* Styles for Product Page Customization */
 /* NOTE: Do not edit the Bootstrap CSS files. */
-
+html {
+}
+body {
+  
+}
+title {
+}
 body {
     padding-top: 30px;
     padding-bottom: 20px;
-    color: green;
+}
+#explainervideo {
+    margin-left: 200px;
+    padding: 10px;
+    margin-top: -250px; 
+}
+#social {
+  list-style-type: none; 
+  width: 60px; 
+  margin-top: 150px; 
+}
+#facebook {
+  width: 50px; 
+  hieght: 50px;
+}
+#twitter {
+  width: 50px; 
+  hieght: 50px;
+}
+#instagram {
+  width: 50px; 
+  hieght: 50px;
+}
+
+#features {
+  border-style: solid; 
+  border-radius: 50%;
+  padding: 150px; 
+  background: orange; 
+  position: fixed; 
+  right: 100px; 
+  top: 70px; 
+  width: 500px; 
+  text-align: center; 
+}
+#testimonials {
+  border-style: solid; 
+  border-radius: 50%;
+  padding: 150px; 
+  background: yellow; 
+  position: fixed; 
+  right: 100px; 
+  top: 400px; 
+  width: 500px; 
+  text-align: center; 
+}
+#about {
+}
+#content div{
+  width: 840px; 
+  border-style: solid; 
+  border-radius: 8px; 
+  margin-left: 20px; 
+  padding: 10px; 
+  text-align: center; 
+  bottom: 800px; 
 }
