--- a/main.css
+++ b/main.css
@@ -1,11 +1,12 @@
 /* Styles for Product Page Customization */
 /* NOTE: Do not edit the Bootstrap CSS files. */
 html {
+ 
 }
 body {
-  
 }
 title {
+  padding: 50px; 
 }
 body {
     padding-top: 30px;
@@ -15,6 +16,13 @@ body {
     margin-left: 200px;
     padding: 10px;
     margin-top: -250px; 
+    border-style: solid; 
+    border-color: blue; 
+}
+iframe {
+  border-style: solid; 
+  border-color: blue; 
+  border-width: 15px; 
 }
 #social {
   list-style-type: none; 
@@ -33,37 +41,51 @@ body {
   width: 50px; 
   hieght: 50px;
 }
-
 #features {
   border-style: solid; 
-  border-radius: 50%;
-  padding: 150px; 
-  background: orange; 
+  border-radius: 8px; 
+  padding: 50px; 
   position: fixed; 
   right: 100px; 
   top: 70px; 
-  width: 500px; 
-  text-align: center; 
+  width: 300px; 
+  text-align: left; 
+  -webkit-transition: width 2s, height 2s, -webkit-transform 2s; /* Safari */
+  transition: width 2s, height 2s, transform 2s;
+}
+#features:hover {
+  width: 300px;
+  height: 300px;
+  -webkit-transform: rotate(180deg); /* Safari */
+  transform: rotate(180deg);
 }
 #testimonials {
   border-style: solid; 
-  border-radius: 50%;
-  padding: 150px; 
-  background: yellow; 
+  border-radius: 8px; 
+  padding: 50px; 
   position: fixed; 
   right: 100px; 
   top: 400px; 
-  width: 500px; 
-  text-align: center; 
+  width: 300px; 
+  text-align: left; 
+  -webkit-transition: width 2s, height 2s, -webkit-transform 2s; /* Safari */
+  transition: width 2s, height 2s, transform 2s;
+}
+#testimonials:hover {
+  width: 300px;
+  height: 300px;
+  -webkit-transform: rotate(180deg); /* Safari */
+  transform: rotate(180deg);
 }
 #about {
 }
-#content div{
-  width: 840px; 
+#content {
+  width: 810px; 
   border-style: solid; 
   border-radius: 8px; 
   margin-left: 20px; 
   padding: 10px; 
   text-align: center; 
   bottom: 800px; 
+  background-color: lightblue; 
 }
