--- a/main.css
+++ b/main.css
@@ -8,15 +8,50 @@ html {
 title {
   padding: 50px; 
 }
+    #navbar {
+    width: 827px; 
+}
+    .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
+    color: #000;
+}
+
+    .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active >   
+     a:hover, .navbar-default .navbar-nav > .active > a:focus {
+    color: white; 
+    background-color: #030033;
+}
+
+    .navbar-default {
+    background-color: #0f006f;
+    border-color: #030033;
+
+}
+
+    .dropdown-menu > li > a:hover,
+    .dropdown-menu > li > a:focus {
+    color: #262626;
+    text-decoration: none;
+    background-color: #66CCFF;  /*change color of links in drop down here*/
+   }
+
+   .nav > li > a:hover,
+   .nav > li > a:focus {
+    text-decoration: none;
+    background-color: silver; /*Change rollover cell color here*/
+  }
+
+
+   .navbar-default .navbar-nav > li > a {
+    color: white; /*Change active text color here*/
+    }
 body {
     padding-top: 30px;
     padding-bottom: 20px;
 }
 #explainervideo {
-    margin-left: 200px;
+    margin-left: 200px; 
     margin-top: -250px; 
 }
-
 #social {
   list-style-type: none; 
   width: 60px; 
@@ -40,45 +75,109 @@ body {
   position: fixed; 
   right: 100px; 
   top: 70px; 
-  width: 300px; 
+  width: 400px; 
   text-align: left; 
-  -webkit-transition: width 2s, height 2s, -webkit-transform 2s; /* Safari */
-  transition: width 2s, height 2s, transform 2s;
+  transition-duration: 1s;
+  transition-timing-function: linear;
+	-ms-transform: translate(0, 11em); 
 }
 #featuresimg:hover {
-  width: 300px;
-  height: 300px;
-  -webkit-transform: rotate(180deg); /* Safari */
-  transform: rotate(180deg);
+  -webkit-transform: translate(0, 11em); 
+  transform: translate(1, 11em);
 }
 #testimonialsimg {
   border-style: solid; 
   border-radius: 8px; 
   position: fixed; 
   right: 100px; 
-  top: 400px; 
-  width: 300px; 
+  top: 450px; 
+  width: 400px; 
   text-align: left; 
-  -webkit-transition: width 2s, height 2s, -webkit-transform 2s; /* Safari */
-  transition: width 2s, height 2s, transform 2s;
+  transition-duration: 1s;
+  transition-timing-function: linear;
+	-ms-transform: translate(0, -11.5em); 
 }
 #testimonialsimg:hover {
-  width: 300px;
-  height: 300px;
-  -webkit-transform: rotate(180deg); /* Safari */
-  transform: rotate(180deg);
-}
-
-#about {
+ -webkit-transform: translate(0, -11.5em); 
+  transform: translate(1, -11.5em);
 }
 #content {
   background: rgba(0, 230, 230, .8); 
-  width: 810px; 
+  width: 826px; 
   border-style: solid; 
   border-radius: 8px; 
-  margin-left: 20px; 
   padding: 10px; 
   text-align: center; 
-  bottom: 800px; 
   color: white; 
+  margin-top: 50px; 
+}
+#contact {
+  border-radius: 8px; 
+  list-style-type: none; 
+  width: 350px; 
+  background: rgba(0, 230, 230, .8); 
+  color: white; 
+  float: right; 
+  margin-right: 830px; 
+  margin-top: 100px; 
+}
+#featuresmenu {
+  position: fixed; 
+  padding-bottom: 60px; 
+  right: 100px; 
+  top: 70px; 
+  width: 400px; 
+  height: 160px; 
+  text-align: left; 
+  list-style-type: none; 
+  border-style: solid; 
+  border-radius: 8px; 
+  border-color: rgba(0, 230, 230, .8); 
+}
+#testimonialsmenu {
+  position: fixed; 
+  padding-bottom: 10px; 
+  padding-top: 40px; 
+  position: fixed; 
+  right: 100px; 
+  top: 450px; 
+  width: 400px; 
+  text-align: left; 
+  height: 150px; 
+  text-align: left; 
+  list-style-type: none; 
+  border-style: solid; 
+  border-radius: 8px; 
+  border-color: rgba(0, 230, 230, .8); 
+}
+.modal {
+    display: none; 
+    position: fixed;
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4); 
+}
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; 
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
