--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 /* Styles for Product Page Customization */
 /* NOTE: Do not edit the Bootstrap CSS files. */
-html {
+html {	
 }
 #headerimage {
   border-radius: 8px; 
@@ -8,45 +8,41 @@ html {
 title {
   padding: 50px; 
 }
+
     #navbar {
     width: 827px; 
 }
     .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
     color: #000;
 }
-
     .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active >   
      a:hover, .navbar-default .navbar-nav > .active > a:focus {
     color: white; 
     background-color: #030033;
 }
-
     .navbar-default {
     background-color: #0f006f;
     border-color: #030033;
-
 }
-
     .dropdown-menu > li > a:hover,
     .dropdown-menu > li > a:focus {
     color: #262626;
     text-decoration: none;
-    background-color: #66CCFF;  /*change color of links in drop down here*/
+    background-color: #66CCFF;  
    }
-
    .nav > li > a:hover,
    .nav > li > a:focus {
     text-decoration: none;
-    background-color: silver; /*Change rollover cell color here*/
+    background-color: silver; 
   }
-
-
    .navbar-default .navbar-nav > li > a {
-    color: white; /*Change active text color here*/
+    color: white; 
     }
 body {
     padding-top: 30px;
     padding-bottom: 20px;
+    display: block;
+		background-image: url("https://media.giphy.com/media/kog2J5GfDdPoY/giphy.gif");
 }
 #explainervideo {
     margin-left: 200px; 
@@ -71,6 +67,7 @@ body {
 }
 #featuresimg {
   border-style: solid; 
+	border-color: white; 
   border-radius: 8px; 
   position: fixed; 
   right: 100px; 
@@ -87,6 +84,7 @@ body {
 }
 #testimonialsimg {
   border-style: solid; 
+	border-color: white; 
   border-radius: 8px; 
   position: fixed; 
   right: 100px; 
@@ -102,9 +100,8 @@ body {
   transform: translate(1, -11.5em);
 }
 #content {
-  background: rgba(0, 230, 230, .8); 
+  background: rgb(0, 230, 230); 
   width: 826px; 
-  border-style: solid; 
   border-radius: 8px; 
   padding: 10px; 
   text-align: center; 
@@ -115,8 +112,8 @@ body {
   border-radius: 8px; 
   list-style-type: none; 
   width: 350px; 
-  background: rgba(0, 230, 230, .8); 
-  color: white; 
+  background: rgb(0, 230, 230); 
+	color: white; 
   float: right; 
   margin-right: 830px; 
   margin-top: 100px; 
@@ -133,6 +130,7 @@ body {
   border-style: solid; 
   border-radius: 8px; 
   border-color: rgba(0, 230, 230, .8); 
+	background-color: white; 
 }
 #testimonialsmenu {
   position: fixed; 
@@ -149,6 +147,7 @@ body {
   border-style: solid; 
   border-radius: 8px; 
   border-color: rgba(0, 230, 230, .8); 
+	background-color: white; 
 }
 .modal {
     display: none; 
@@ -159,11 +158,10 @@ body {
     width: 100%; 
     height: 100%; 
     overflow: auto; 
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4); 
+    background-color: rgba(0,0,0,0.7); 
 }
 .modal-content {
-    background-color: #fefefe;
+    background-color: rgb(0, 230, 230); 
     margin: 15% auto; 
     padding: 20px;
     border: 1px solid #888;
@@ -180,4 +178,10 @@ body {
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+#loginwindow {
+	width: 600px; 
+}
+#registrationwindow {
+	width: 600px; 
 }
